--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "version": "1.0",
     "manifest_version": 2,
     "content_security_policy": "script-src 'self'; object-src 'self'",
-    "description": "ứng dụng lấy danh sách video mới nhất trên youtube.",
+    "description": "Extension hỗ trợ việc coi video youtube với hai chế độ là `picture in picture` và new `window`",
     "browser_action": {
        "default_icon": "img/icon.png",
        "default_title": "Youtoo",
