--- a/manifest.json
+++ b/manifest.json
@@ -19,6 +19,7 @@
     ],
     "web_accessible_resources": [
         "css/jquery-ui.min.css",
+        "css/iframe.css",
         "scripts/jquery.js",
         "scripts/jquery-ui.min.js",
         "img/icon.png",
@@ -28,7 +29,8 @@
         {
             "matches": ["<all_urls>"],
             "css": [
-                "css/jquery-ui.min.css"
+                "css/jquery-ui.min.css",
+                "css/iframe.css"
             ],
             "js": [
                 "scripts/jquery.js",
