--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,15 @@
 {
-    "name": "Youtoo",
+    "name": "Fast generate URL-QR",
     "version": "1.0",
     "manifest_version": 2,
     "content_security_policy": "script-src 'self'; object-src 'self'",
-    "description": "Extension hỗ trợ việc coi video youtube với hai chế độ là `picture in picture` và `new window`",
+    "description": "Generate QR code from url of active tab",
     "browser_action": {
        "default_icon": "img/icon.png",
-       "default_title": "Youtoo",
+       "default_title": "Fast generate URL-QR",
        "default_popup":"html/popup.html"
     },
     "permissions": [
-        "storage",
         "tabs",
         "activeTab",
         "http://*/*",
@@ -18,24 +17,6 @@
         "<all_urls>"
     ],
     "web_accessible_resources": [
-        "css/jquery-ui.min.css",
-        "css/iframe.css",
-        "scripts/jquery.js",
-        "scripts/jquery-ui.min.js",
-        "img/icon.png",
-        "img/bg.png"
-    ],
-    "content_scripts": [
-        {
-            "matches": ["<all_urls>"],
-            "css": [
-                "css/jquery-ui.min.css",
-                "css/iframe.css"
-            ],
-            "js": [
-                "scripts/jquery.js",
-                "scripts/jquery-ui.min.js"
-            ]
-        }
+        "img/icon.png"
     ]
 }
